# bellows

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
bellows/: __init__.py  __main__.py  app.py  cli.py  config.py
bellows/simulation/: __init__.py  engine.py  lung_model.py  mechanics.py  metrics.py  phase.py  presets.py  recording.py  runner.py  state.py
bellows/ui/: __init__.py  loop.py  waveform.py
bellows/ventilator/: __init__.py  registry.py
bellows/ventilator/modes/: __init__.py  aprv.py  base.py  pcv.py  prvc.py  vcv.py
bellows/waveforms/: __init__.py  buffers.py
bellows/web/: __init__.py  server.py
bellows/web/static/: app.js  index.html  style.css
examples/: generate_waveform_data.ipynb  lung_models_demo.ipynb  pcv_waveform_samples.csv
tests/: helpers.py  test_app_controls.py  test_app_metrics.py  test_loop_widget.py  test_lung_model.py  test_modes.py  test_public_api.py  test_waveform_widget.py  test_web_server.py
tests/cli/: test_cli.py  test_config.py
tests/modes/: test_modes.py
tests/simulation/: test_lung_model.py  test_metrics.py  test_recording.py  test_runner.py  test_state.py
