[project]
name = "bellows"
version = "0.1.0"
description = "A terminal-based ventilation simulator and waveform visualiser."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89.0",
]

[project.scripts]
bellows = "bellows.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
