[project]
name = "bellows"
version = "0.1.0"
description = "A terminal-based ventilation simulator and waveform visualiser."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "textual>=0.89.0",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
bellows = "bellows.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
]
